--- a/download.html
+++ b/download.html
@@ -65,9 +65,9 @@
 
 <ul style="margin-left:20px; list-style-type:disc;">
 <li>Join the <a href="https://groups.google.com/group/tangle-talk">Tangle Talk</a> discussion group.</li>
-<li>Contribute Tangle classes and formats for possible inclusion with TangleKit.</li>
-<li>Contribute documents you've made for possible inclusion in the examples.</li>
-<li>Let us know if the API makes it difficult to make something you want to make.</li>
+<li>Contribute Tangle classes and formats for TangleKit.</li>
+<li>Contribute documents you've made for the examples.</li>
+<li>Complain if the API makes it difficult to make something you want to make.</li>
 <li>Complain about confusing documentation.</li>
 <li>Report bugs.</li>
 <li>Tell your friends.</li>
@@ -86,7 +86,7 @@
 <div id="footer">
 <div id="footerShadow"></div>
 
-<div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
+<div class="author"><a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
