--- a/guide.html
+++ b/guide.html
@@ -300,7 +300,7 @@ of your recommended daily calories.
 
 <h2>Possibilities</h2>
 
-<p>We just worked through a very simple example, so give you a taste of what you can tangle.  </p>
+<p>We just worked through a very simple example, to give you a taste of what you can tangle.  </p>
 
 
 
@@ -313,7 +313,7 @@ of your recommended daily calories.
 <div id="footer">
 <div id="footerShadow"></div>
 
-<div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
+<div class="author"><a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
