--- a/index.html
+++ b/index.html
@@ -247,8 +247,9 @@ will consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b
 
 <p style="text-align:center; margin-top:30px;">*&nbsp;&nbsp;&nbsp;*&nbsp;&nbsp;&nbsp;*</p>
 
-<p>For a single extensive example, see <a href="http://worrydream.com/TenBrighterIdeas/">Ten Brighter Ideas</a>.</p>
+<p>For a more extensive example, see <a href="http://worrydream.com/TenBrighterIdeas/">Ten Brighter Ideas</a>.</p>
 <p>For the motivation and philosophy behind reactive documents, see <a href="http://worrydream.com/ExplorableExplanations/">Explorable Explanations</a>.</p>
+<p>Or learn how to <a href="guide.html">get started with Tangle</a>.</p>
 
 </div> <!-- body -->
 
@@ -259,7 +260,7 @@ will consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b
 <div id="footer">
 <div id="footerShadow"></div>
 
-<div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
+<div class="author"><a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
