--- a/reference.html
+++ b/reference.html
@@ -279,7 +279,7 @@ Tangle.classes.ClickableNumber = {
 };
 </pre>
 
-<p>The <code>options</code> paramater is described below.</p>
+<p>The <code>options</code> parameter is described below.</p>
 
 
 <h4>update</h4>
