adding possibilities to guide

--- a/guide.html
+++ b/guide.html
@@ -332,10 +332,16 @@ of your recommended daily calories.
 
 <h2>Possibilities</h2>
 
-<p>We just worked through a very simple example, to give you a taste of what you can tangle.  But there's so much more you can do.</p>
+<p>We just worked through a very simple example, to give you a taste of what you can tangle.  But there's much more you can do.</p>
 
+<ul class="dotted">
+<li>Create rich data visualizations, such as charts and graphs, using Tangle classes.</li>
+<li>Create dynamic data displays, such as stock tickers and weather reports, using Tangle to maintain a clean separation between back-end data and front-end views.</li>
+<li>Pass around strings, arrays, and other objects in variables, for more data-heavy applications.</li>
+<li>Create controls and views that use multiple variables at once.</li>
+</ul>
 
-
+<p>You might want to look over the <a href="reference.html">API reference</a>, or just <a href="download.html">download Tangle</a> and dive right in.</p>
 
 
 </div> <!-- body -->
