updating link to tangle-talk

--- a/download.html
+++ b/download.html
@@ -28,7 +28,7 @@
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- header -->
@@ -46,7 +46,7 @@
 
 <p>Visit the project on <a href="https://github.com/worrydream/Tangle">GitHub</a>.</p>
 
-<p>Join the brand new <a href="https://groups.google.com/group/tangle-talk">Tangle Talk</a> discussion group!</p>
+<p>Join the brand new <a href="https://groups.google.com/group/tangle-talk/topics">Tangle Talk</a> discussion group!</p>
 
 
 <h2>What's In The Box</h2>
@@ -64,9 +64,9 @@
 <p>But don't let that stop you. <b>Make things with Tangle!</b>  Here's how you can help:</p>
 
 <ul style="margin-left:20px; list-style-type:disc;">
-<li>Join the <a href="https://groups.google.com/group/tangle-talk">Tangle Talk</a> discussion group.</li>
-<li>Contribute Tangle classes and formats for TangleKit.</li>
+<li>Join the <a href="https://groups.google.com/group/tangle-talk/topics">Tangle Talk</a> discussion group.</li>
 <li>Contribute documents you've made for the examples.</li>
+<li>Contribute Tangle classes and formats for TangleKit.</li>
 <li>Complain if the API makes it difficult to make something you want to make.</li>
 <li>Complain about confusing documentation.</li>
 <li>Report bugs.</li>
@@ -92,7 +92,7 @@
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- footer -->
