--- a/guide.html
+++ b/guide.html
@@ -41,7 +41,7 @@
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- header -->
@@ -359,7 +359,7 @@ of your recommended daily calories.
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- footer -->
