--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- header -->
@@ -266,7 +266,7 @@ you consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b>
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- footer -->
