--- a/reference.html
+++ b/reference.html
@@ -28,7 +28,7 @@
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- header -->
@@ -464,7 +464,7 @@ Tangle.formats.myFormat = function (value, size) { return "..."; }
     <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
     <a href="reference.html">API Reference</a> &nbsp; &nbsp;
     <a href="download.html">Download</a> &nbsp; &nbsp;
-    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
+    <a href="https://groups.google.com/group/tangle-talk/topics">Discuss</a>
 </div>
 
 </div> <!-- footer -->
