more website touch-ups

--- a/download.html
+++ b/download.html
@@ -65,7 +65,7 @@
 
 <ul style="margin-left:20px; list-style-type:disc;">
 <li>Join the <a href="https://groups.google.com/group/tangle-talk/topics">Tangle Talk</a> discussion group.</li>
-<li>Contribute documents you've made for the examples.</li>
+<li>Contribute documents you've made for the examples.  Better examples are needed badly.</li>
 <li>Contribute Tangle classes and formats for TangleKit.</li>
 <li>Complain if the API makes it difficult to make something you want to make.</li>
 <li>Complain about confusing documentation.</li>
