futzing with site

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div id="body">
 
 <p>Tangle is a JavaScript library for creating <b>reactive documents</b>.  Your readers can interactively explore
-possibilities, play with parameters, and see the document update immediately.</p>
+possibilities, play with parameters, and see the document update immediately.  Tangle is super-simple and easy to learn.</p>
 
 <p>This is a simple reactive document.</p>
 
